
Key to developers
-----------------

- DP   Dave Page
- AP   Andreas Pflug
- JMP  Jean-Michel Poure
- HS   Hiroshi Saito
- AHP  Adam H. Pendleton
- MP   Marc Persuy
- DAP  Darko Prenosil
- FGP  Florian G. Pflug
- MH   Magnus Hagander

Changes
-------

Date       Dev Ver    Change details
---------- --- -----  --------------
2006-11-17 DP  1.6.1  Include IN/OUT/INOUT keywords in procedure identifiers
                      in the treeview.
2006-11-17 DP  1.6.1  Fix deletion of stored procedures, Per Erwin.
2006-11-16 DP  1.6.1  Rework the Find/Replace code to fix a couple of minor 
                      bugs and improve readability.
2006-11-16 DP  1.6.1  Enable the OK button on the Database properties dialog
                      when the owner is changed, per Jim Cullison
2006-11-15 DP  1.6.1  Prevent a crash if the 'View Filtered Data' filter dialog
                      is cancelled. Per Erwin Brandstetter
2006-11-06 DP  1.6.0  Hide binary data (bytea) in the edit grid.
2006-10-12 DP  1.6.0  Add an installer for Mac.
2006-10-03 HS  1.6.0  Fixed display of pg_dump/pg_restore output in non-ASCII
                      charactersets.
2006-09-28 DP  1.6.0  Ensure the schema is specified when backing up individual
                      tables [Luca Arzeni]
2006-09-15 DP  1.6.0  When exporting data to the local charset wxFile::Write 
                      will crash if it can't convert the data. Check that
                      conversion is possible before writing each row and skip 
                      if not. If any failures have occured, tell the user how 
                      many, and suggest they use UTF8 instead. Per Harald 
                      Armin Massa
2006-09-11 DP  1.6.0  Add support for building indexes concurrently on 8.2.
2006-09-08 DP  1.6.0  Use SQL standard type names where appropriate. Show
                      them as 'aliases' in the browser. [Magnus Hagander/
                      Dave Page]