@@ -109,6 +109,6 @@ wxString DateToStr(const wxDateTime &datetime);
 wxString qtConnString(const wxString& value); // connection strings always have single quotes escaped with backslash
 
 // check if size/pos have reasonable values
-void CheckOnScreen(wxPoint &pos, wxSize &size, const int w0=100, const int h0=70);
+void CheckOnScreen(wxWindow *win, wxPoint &pos, wxSize &size, const int w0=100, const int h0=70);
 
 #endif
