@@ -35,6 +35,8 @@ Changes
 
 Date       Dev Ver    Change details
 ---------- --- -----  --------------
+2006-11-21 DP  1.6.1  When checking the position & size of windows, use the
+                      dimensions of the current display, not the primary.
 2006-11-17 DP  1.6.1  Include IN/OUT/INOUT keywords in procedure identifiers
                       in the treeview.
 2006-11-17 DP  1.6.1  Fix deletion of stored procedures, Per Erwin.
